--- a/app/package.json
+++ b/app/package.json
@@ -14,6 +14,7 @@
     "@auth0/auth0-react": "^2.5.0",
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-query": "^5.85.3",
+    "axios": "^1.13.2",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.5",
     "framer-motion": "^12.23.12",
@@ -21,6 +22,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.6.0",
+    "react-router": "^7.9.5",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
